Fixes button text alignment

--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -6,7 +6,7 @@ $Button--hero-color: $color-amaranth;
 
 $Button-responsive: (
   height: (50px, 60px),
-  line-height: (50px, 60px),
+  line-height: (47px, 57px),
   padding: (0 20px, 0 40px),
 );
 
